...
			android:entries="@array/prefs_theme_keys"
			android:title="@string/prefs_theme"
			android:entryValues="@array/prefs_theme_values"
			android:key="ui.theme"
			android:summary="@string/prefs_theme_summary"
			android:defaultValue="@style/DefaultTheme" />
		<PreferenceScreen android:title="@string/prefs_ui_buttons_layout" android:summary="@string/prefs_ui_buttons_layout_summary">
			<intent android:action="launch_buttons_presets" />
		</PreferenceScreen>
		<CheckBoxPreference
			android:key="ui.displaytrack.osm"
			android:title="@string/prefs_displaytrack_osm"
			android:summary="@string/prefs_displaytrack_osm_summary"
...
